# ADE-FCM

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IEEE_PAPER_DRAFT.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  SECURITY_CHECKLIST.md  make.bat  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
ablation/: __init__.py  ablation_study.py  main.py
baseline_project/: cluster_update.py  convergence.py  data_loader.py  distance_metrics.py  evaluation.py  main.py  membership_update.py  objective_function.py  preprocessing.py  requirements.txt  spark_engine.py  utils.py  visualization.py
benchmarks/: benchmark_runner.py  main.py  metrics_collector.py  plots.py  results_analyzer.py
big_data/: __init__.py  large_scale_fcm.py  main.py  spark_dataframe_optimizer.py  spark_rdd_optimizer.py
deep_ade_fcm/: __init__.py  autoencoder.py  deep_ade_fcm.py  main.py  trainer.py  visualization.py
deployment/: Dockerfile  docker-compose.yml
deployment/kubernetes/: configmap.yaml  deployment.yaml  service.yaml
deployment/mlflow/: mlflow_config.py
deployment/monitoring/: grafana_dashboard.json  prometheus.yml
docs/: 01_PAPER_UNDERSTANDING.md  02_MATHEMATICAL_DERIVATIONS.md  03_INSTALLATION.md  04_USAGE_GUIDE.md  05_REPRODUCIBILITY.md  06_DEPLOYMENT_GUIDE.md  07_GITHUB_REPO_STRUCTURE.md  08_ARCHITECTURE_DIAGRAM.md  09_API_REFERENCE.md  10_PRESENTATION.md
gpu/: cuda_kernels.py  gpu_fcm.py  main.py  rapids_fcm.py  spark_gpu_hybrid.py
novel_algorithm/: __init__.py  adaptive_params.py  ade_fcm.py  auto_cluster.py  density_init.py  main.py  outlier_detector.py  spark_ade_fcm.py  xai.py
paper/tables/: algorithm_rankings.csv  algorithm_rankings.tex  ari_results.csv  ari_results.tex  dataset_summary.csv  dataset_summary.tex  davies_bouldin_results.csv  davies_bouldin_results.tex  effect_sizes.csv  effect_sizes.tex  nemenyi_results.csv  nmi_results.csv  nmi_results.tex  runtime_results.csv  runtime_results.tex  silhouette_results.csv  silhouette_results.tex
results/: ablation_results.json  convergence_data.json  expanded_benchmarks.json  expanded_benchmarks_missing.json  mfeat_factors_result.json  phase7a_raw_results.json  robustness_study.json  sensitivity_analysis.json  statistics_summary.json
results/deep_ade_fcm/: all_results.json  (+4 more)
scripts/: analyze_sensitivity.py  benchmark_missing.py  bootstrap_analysis.py  expand_benchmarks.py  generate_publication_outputs.py  generate_tables.py  phase7a_validation.py  plot_sensitivity.py  recompute_statistics.py  robustness_study.py  run_missing_benchmarks.py  sensitivity_analysis.py
src/: main.py
streaming/: __init__.py  kafka_producer.py  main.py  online_clustering.py  spark_streaming_consumer.py
tests/: conftest.py  test_ablation.py  test_baseline.py  test_benchmark.py  test_deep_ade_fcm.py  test_gpu.py  test_novel_algorithm.py  test_streaming.py
xai/: __init__.py  cluster_explainer.py  main.py  shap_explainer.py  visualizer.py
(+15 files in other folders)
