[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ade-fcm"
version = "1.0.0"
description = "ADE-FCM: An Adaptive Explainable Fuzzy C-Means Framework for Automated Clustering"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Khalil Benihya"},
    {name = "Ahmed Khaled"},
]
keywords = ["fuzzy-c-means", "clustering", "explainable-ai", "automated-clustering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "loguru>=0.6.0",
]

[project.optional-dependencies]
spark = ["pyspark>=3.3.0"]
gpu = ["cupy-cuda11x>=11.0.0"]
streaming = ["confluent-kafka>=1.9.0"]
xai = ["shap>=0.40.0"]
mlflow = ["mlflow>=1.25.0"]
all = ["pyspark", "cupy-cuda11x", "confluent-kafka", "shap", "mlflow"]

[project.urls]
Homepage = "https://github.com/ade-fcm/ade-fcm"
Repository = "https://github.com/ade-fcm/ade-fcm"

[project.scripts]
ade-fcm = "src.main:main"
ade-fcm-benchmark = "benchmarks.main:main"
ade-fcm-stream = "streaming.main:main"
ade-fcm-xai = "xai.main:main"
ade-fcm-ablation = "ablation.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ade_fcm*", "src*", "benchmarks*", "streaming*", "xai*", "ablation*", "gpu*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src", "ade_fcm"]
omit = ["tests/*", "*/__init__.py"]

[tool.black]
line-length = 110
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 110

[tool.flake8]
max-line-length = 110
extend-ignore = ["E203", "W503"]
