[metadata]
name = ade-fcm
version = 1.0.0
description = Adaptive Distributed Explainable Fuzzy C-Means
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/research/ade-fcm
license = MIT

[options]
packages = find:
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
    pandas>=1.3.0
    scikit-learn>=1.0.0
    matplotlib>=3.4.0
    pyspark>=3.3.0
    loguru>=0.6.0

[options.extras_require]
gpu = cupy-cuda11x>=11.0.0
streaming = confluent-kafka>=1.9.0
xai = shap>=0.40.0
all = cupy-cuda11x; confluent-kafka; shap; mlflow

[options.entry_points]
console_scripts =
    ade-fcm = src.main:main
    ade-fcm-benchmark = benchmarks.main:main
